# TamagotchiGame

./: .clang-format  CMakeLists.txt  GameCycle.cpp  GameCycle.h  InputHandler.h  Renderable.h  World.cpp  World.h  main.cpp
